--- a/trim/catalog.html
+++ b/trim/catalog.html
@@ -491,7 +491,7 @@
 				  <div class="sidebar-box ftco-animate">
 					  <div class="categories">
 						  <h3>Каталог</h3>
-						  <ul class="parent-ul">
+						  <ul class="parent-ul js-clone-catalog">
 							  <li><a href="kuhni.html">Кухни <span>(12)</span></a></li>
 							  <li><a href="#">Шкафы <span>(22)</span></a></li>
 							  <li><a href="#">Комоды <span>(37)</span></a></li>
@@ -564,13 +564,6 @@
 	                </div>
 	              </div>
 	            </div>
-
-
-
-
-
-	           
-
 	            <div class="sidebar-box ftco-animate">
 	              <h3>Tag Cloud</h3>
 	              <div class="tagcloud">
@@ -686,6 +679,35 @@
             <i class="icon-angle-double-up"></i>
         </a>
         <!--Scroll to Top END -->
+
+<!-- SubMenu for Catalog Offcavnas-->
+<section>
+		  <aside class="offcanvas-submenu-navigation">
+			  <div class="offcanvas-navigation__inner">
+				  <!-- LOGO -->
+				  <div class="logo-cavnas" >
+					  <div>
+						  <span class="namefirm">Каталог</span>
+					  </div>
+				  </div>
+				  <!-- button close -->
+				  <div class="close-button">
+					  <a href="" class="btn-close" style="font-size: 36px;">
+						  <i class="fa fa-times" aria-hidden="true"></i>
+						  <span class="sr-only">Close Offcanvas Navigtion</span>
+					  </a>
+				  </div>
+				  <div class="offcanvas-navigation__top catalog-clone"></div>
+			  </div>
+		  </aside>
+</section>
+<!-- END -->
+	  <!--SubMenu Offcavnas -->
+	  <div  class = "submenu-offcavnas ">
+		  <a href="#">
+			  <i class="icon-filter_list"></i>
+		  </a>
+	  </div>
 
 	  <script src="js/jquery.min.js"></script>
 	  <script src="js/jquery-migrate-3.0.1.min.js"></script>
