--- a/trim/index.html
+++ b/trim/index.html
@@ -142,18 +142,16 @@
                         </div>
                     </li>
                     <li>
-                        <a href="tel://+375297925779">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            +375 (29) 792-57-79</a>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+375297925779">+375 (29) 792-57-79</a>
                     </li>
                     <li>
-                        <a href="tel://+375295506565">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            +375 (29) 550-65-65</a>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+375295506565">+375 (29) 550-65-65</a>
                     </li>
-                    <li><a href="mailto:sv-ceh@tut.by">
+                    <li>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        sv-ceh@tut.by</a>
+                        <a href="mailto:sv-ceh@tut.by">sv-ceh@tut.by</a>
                     </li>
                 </ul>
 
