--- a/trim/kuhni.html
+++ b/trim/kuhni.html
@@ -493,7 +493,7 @@
                 <div class="sidebar-box ftco-animate ">
                     <div class="categories ">
                         <h3>Разделы</h3>
-                        <ul class="parent-ul">
+                        <ul class="parent-ul js-clone-filter">
                             <li class="nav-item"><a href="kuhni.html">Угловые кухни<span>(12)</span></a></li>
                             <li class="nav-item"><a href="about.html">Прямые кухни<span>(12)</span></a></li>
                             <li class="nav-item has-children">
@@ -756,46 +756,11 @@
             <!-- button close -->
             <div class="close-button">
                 <a href="" class="btn-close" style="font-size: 36px;">
-                    <i class="icon-cancel"></i>
+                    <i class="fa fa-times" aria-hidden="true"></i>
                     <span class="sr-only">Close Offcanvas Navigtion</span>
                 </a>
             </div>
-
-            <div class="offcanvas-navigation__top">
-                <ul class="offcanvas-menu">
-                    <li class="nav-item"><a href="kuhni.html">Угловые кухни Угловые кухни</a><span>(4)</span></li>
-                    <li class="nav-item"><a href="about.html">Прямые кухни</a><span>(3)</span></li>
-                    <li class="nav-item has-children" >
-                        <a href="2.html">Кухни с ДСП</a><span>(4)</span>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="egge2r.html">Egger</a><span>(4)</span>
-                                <ul><li><a href ="egger.html">EGGER</a><span>(4)</span></li></ul>
-                            </li>
-                            <li>
-                                <a href="#">Boyard</a>
-                                <span>(4)</span>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a href="gallery.html">Кухни с остравом</a><span>(4)</span></li>
-                    <li class="nav-item"><a href="blog.html">Белые кухни</a><span>(4)</span></li>
-                    <li class="nav-item"><a href="contact.html">Кухни из мдф</a><span>(4)</span></li>
-                    <li class="nav-item">
-                        <a href="contact.html">Маленькие кухни</a><span>(18)</span>
-                        <ul class="">
-                            <li>
-                                <a href="#">На дачу</a>
-                                <span>(4)</span>
-                            </li>
-                            <li>
-                                <a href="#">В квартиру</a>
-                                <span>(4)</span>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <div class="offcanvas-navigation__top filter-clone"></div>
         </div>
     </aside>
 </section>
