--- a/trim/single-service.html
+++ b/trim/single-service.html
@@ -468,31 +468,28 @@
 
 			  <div class="modal-content callback">
 				  <div class="modal-header">
-					  <h5 class="modal-title" id="exampleModalLabel">Заказать звонок</h5>
+					  <h5 class="modal-title" id="exampleModalLabel">Задать вопрос</h5>
 					  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						  <span aria-hidden="true">&times;</span>
 					  </button>
 				  </div>
 
-				  <div class="modal-body ">
-					  <form class="contact-form">
+				  <div class="modal-body">
+					  <form class="contact-form question-form">
 						  <div class="form-group">
-							  <input type="text" class="form-control" id="nameCallBack" placeholder="Имя..">
+							  <input type="text" name="name" class="form-control" placeholder="Имя..">
 						  </div>
 						  <div class="form-group">
-							  <input type="text" class="form-control" id="nameCallBack" placeholder="E-mail..">
+							  <input type="email" name="email"class="form-control"  placeholder="E-mail..">
 						  </div>
 						  <div class="form-group">
-							  <textarea class="form-control" id="message-text" placeholder="Сообщение.."></textarea>
+							  <textarea class="form-control" name="message" placeholder="Ваш вопрос.."></textarea>
+						  </div>
+						  <div class="text-center pt-3 pb-3">
+							  <button type="submit"class="btn btn-primary">Заказать</button>
+							  <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
 						  </div>
 					  </form>
-				  </div>
-				  <div id="response_order">
-					  <p></p>
-				  </div>
-				  <div class="modal-footer">
-					  <button type="button" id="exp" class="btn btn-primary">Заказать</button>
-					  <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
 				  </div>
 			  </div>
 		  </div>
@@ -514,13 +511,18 @@
 	  <script src="js/bootstrap-datepicker.js"></script>
 	  <script src="js/jquery.timepicker.min.js"></script>
 	  <script src="js/scrollax.min.js"></script>
-	  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-	  <script src="js/google-map.js"></script>
 	  <script src="js/main.js"></script>
+
+	  <!-- mask phone -->
+	  <script src="js/jquery.maskedinput.min.js"></script>
+	  <!-- Plugin validate -->
+	  <script src="js/jquery.validate.min.js"></script>
 	  <!-- Simple Parallax Effect для фона-->
-  <script src="js/parallax.min.js"></script>
+  	<script src="js/parallax.min.js"></script>
+	  <!--  Parallaxie для фона-->
+	  <script src="js/parallaxie.js"></script>
    <!-- My Custom File -->
-  <script src="js/atlas.js"></script>
+  	<script src="js/atlas.js"></script>
 	    
 	  </body>
 	</html>
