--- a/trim/single-catalog.html
+++ b/trim/single-catalog.html
@@ -8,29 +8,18 @@
     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-
-    <link rel="stylesheet" href="css/aos.css">
-
-    <link rel="stylesheet" href="css/ionicons.min.css">
-
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-
-    <link rel="stylesheet" href="css/flaticon.css">
+    <!-- START Иконочные шрифты -->
     <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- END -->
     <link rel="stylesheet" href="css/style.css">
-
-    <link rel="stylesheet" href="css/atlas.css">
+    <!--Favicon -->
+    <link rel="shortcut icon" href="img/cropped-favicon-32x32.png" type="image/png">
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
 </head>
 <body>
+
 
 <!--Start nav MENU -->
 <nav  class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -44,11 +33,10 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <div>
+            </div>
         </button>
-
         <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto js-clone-nav">
                 <li class="nav-item">
 
 
@@ -82,7 +70,14 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Горки
                             </a>
-
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Гостиные
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Горки
+                            </a>
                         </li>
                     </ul>
 
@@ -100,6 +95,56 @@
     </div>
 </nav>
 <!-- END nav -->
+
+<!-- Mobile OffCanvas Menu Start -->
+<section>
+    <aside class="offcanvas-navigation">
+        <div class="offcanvas-navigation__inner">
+            <!-- LOGO -->
+            <div class="logo-cavnas" >
+                <div>
+                    <span class="namefirm">Ателье мебели СВ-Купе</span>
+                </div>
+            </div>
+            <!-- button close -->
+            <div class="close-button">
+                <a href="" class="btn-close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                    <span class="sr-only">Close Offcanvas Navigtion</span>
+                </a>
+            </div>
+            <div class="offcanvas-navigation__top menu-clone"></div>
+            <div class="off-con">
+                <p class="namefirm">Связаться с нами</p>
+
+                <ul class="offcanvas-menu " >
+                    <li>
+                        <div class="social-icon d-flex">
+                            <div><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></div>
+                            <div><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i> </a></div>
+                            <div><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></div>
+
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+375297925779">+375 (29) 792-57-79</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+375295506565">+375 (29) 550-65-65</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <a href="mailto:sv-ceh@tut.by">sv-ceh@tut.by</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </aside>
+</section>
+<!-- Mobile Menu End -->
 
 
 <section  class="ftco-section">
@@ -287,10 +332,8 @@
 </section>
 
 <footer class="ftco-footer ftco-section img">
-    <div class="overlay"></div>
     <div class="container">
-        <div class="row mb-5">
-
+        <div class="row mb-3">
             <div class="col-md-2">
                 <div class="ftco-footer-widget mb-4 ml-md-4">
                     <h2 class="ftco-heading-2">Меню</h2>
@@ -302,8 +345,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3">
-
+            <div class="col-md-4">
                 <div class="ftco-footer-widget mb-5">
                     <h2 class="ftco-heading-2">Последние новости</h2>
 
@@ -313,11 +355,9 @@
                             <h3 class="heading"><a href="#">Мебель в стиле ЛОФТ</a></h3>
                             <div class="meta">
                                 <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-
                             </div>
                         </div>
                     </div>
-
                     <div class="block-21 mb-6 d-flex">
                         <a class="blog-img mr-4" style="background-image: url(img/7.jpg);"></a>
                         <div class="text">
@@ -329,7 +369,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2">О нас</h2>
                     <p>Огрымный опыт работы позволяет нам реализовать современные,
@@ -337,10 +377,6 @@
 
                 </div>
             </div>
-
-
-
-
             <div class="col-md-3">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2">У вас есть вопросы?</h2>
@@ -364,60 +400,15 @@
                     </ul>
                 </div>
             </div>
-
         </div>
-
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <p>Copyright &copy; atlas&Co. Все права защищены</p>
-            </div>
-        </div>
-
+    </div>
+    <div class="text-center copyright-botton pb-3 pt-3 pr-1 pl-1">
+        <p class="m-0">Copyright &copy; atlas&Co. Все права защищены</p>
     </div>
 </footer>
 
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
-<!-- OffCanvas Menu Start -->
-<aside class="offcanvas-navigation" id="offcanvasnav">
-    <div class="offcanvas-navigation__inner">
-        <a href="" class="btn-close">
-            <i class="oi oi-x"></i>
-            <span class="sr-only">Close Offcanvas Navigtion</span>
-        </a>
-        <div class="offcanvas-navigation__top">
-            <ul class="offcanvas-menu">
-                <li class="nav-item" >
-                    <a href="index.html" >Главная</a>
-                </li>
-                <li class="nav-item"><a href="about.html" >О компании</a></li>
-                <li class="nav-item has-children" >
-                                            <span class="menu-expand">
-                                                <i class="icon-chevron-down"></i>
-                                            </span>
-                    <a href="gallery.html" >Каталог</a>
-                    <ul class="sub-menu">
-                        <li>
-                            <a href="#">Кухни</a>
-                        </li>
-                        <li>
-                            <a href="#">Шкаф</a>
-                        </li>
-                        <li>
-                            <a href="#">Офисная мебель</a>
-                        </li>
-                    </ul>
-                </li>
-
-                <li class="nav-item"><a href="blog.html" >Блог</a></li>
-                <li class="nav-item"><a href="contacts.html">Контакты</a></li>
-            </ul>
-        </div>
-    </div>
-</aside>
-<!-- OffCanvas Menu End -->
-
 
 <!-- Qicuk View Modal End -->
 <!-- Global Overlay Start -->
@@ -433,24 +424,23 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
+<!-- Плагин всплывающих подсказок -->
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
 <script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/bootstrap-datepicker.js"></script>
-<script src="js/jquery.timepicker.min.js"></script>
+<!-- mask phone -->
+<script src="js/jquery.maskedinput.min.js"></script>
+<!-- Plugin validate -->
+<script src="js/jquery.validate.min.js"></script>
+<!--Эффект прозрачности при скроллинге -->
 <script src="js/scrollax.min.js"></script>
-<!-- Simple Parallax Effect для фона-->
-<script src="js/parallax.min.js"></script>
-
+<!--  Parallaxie для фона-->
+<script src="js/parallaxie.js"></script>
+<!-- Плагин jQuery для создания характеристик перехода анимации в стиле CSS3. -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Счетчики  -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Основной файл настройки и запуска Jquery плагинов -->
 <script src="js/main.js"></script>
-<!-- My Custom File -->
-<script src="js/atlas.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 </body>
 </html>
